@@ -5,7 +5,7 @@ import fr.insee.vtl.model.exceptions.VtlScriptException;
 
 public class FunctionNotFoundException extends VtlScriptException {
 
-    public FunctionNotFoundException(String funcName, Positioned element) {
-        super(String.format("function '%s' not found", funcName), element);
-    }
+  public FunctionNotFoundException(String funcName, Positioned element) {
+    super("function '%s' not found".formatted(funcName), element);
+  }
 }
